force-app/main/default/objects/Training_View__c/Training_View__c.object-meta.xml
<CustomObject>
    <label>Training View</label>
    <nameField>
        <displayFormat>TV-{0000}</displayFormat>
        <label>Training View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>