force-app/main/default/objects/Training_View__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText>True when this video was assigned as mandatory to the user (vs. a view they started on their own).</inlineHelpText>
</CustomField>