force-app/main/default/objects/Training_View__c/fields/Assigned_Via__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Via__c</fullName>
    <label>Assigned Via</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>How the user was assigned this video, e.g. a profile name or "Directly assigned".</inlineHelpText>
</CustomField>