force-app/main/default/objects/Training_View__c/fields/Completion_Method__c.field-meta.xml
<CustomField><fullName>Completion_Method__c</fullName><label>Completion Method</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Tracked</fullName><default>true</default><label>Tracked</label></value><value><fullName>Manual</fullName><default>false</default><label>Manual (External Link)</label></value></valueSetDefinition></valueSet></CustomField>