force-app/main/default/objects/Training_View__c/fields/Document_Current_Page__c.field-meta.xml
<CustomField>
    <fullName>Document_Current_Page__c</fullName>
    <label>Document Current Page</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>