force-app/main/default/objects/Training_View__c/fields/Document_Pages_Read__c.field-meta.xml
<CustomField>
    <fullName>Document_Pages_Read__c</fullName>
    <label>Document Pages Read</label>
    <length>255</length>
    <type>Text</type>
</CustomField>