force-app/main/default/objects/Training_View__c/fields/Notified_At__c.field-meta.xml
<CustomField>
    <fullName>Notified_At__c</fullName>
    <label>Notified At</label>
    <type>DateTime</type>
    <inlineHelpText>When this user was emailed the assignment notification for this video.</inlineHelpText>
</CustomField>