force-app/main/default/objects/Training_View__c/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName>
    <label>Training Video</label>
    <referenceTo>Training_Video__c</referenceTo>
    <relationshipLabel>Training Views</relationshipLabel>
    <relationshipName>Training_Views</relationshipName>
    <type>Lookup</type>
</CustomField>