force-app/main/default/objects/Training_View__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Training Views</relationshipLabel>
    <relationshipName>Training_Views</relationshipName>
    <type>Lookup</type>
</CustomField>