force-app/main/default/objects/Training_View__c/fields/User_Video_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Video_Key__c</fullName>
    <label>User Video Key</label>
    <length>40</length>
    <externalId>true</externalId>
    <type>Text</type>
    <unique>true</unique>
    <inlineHelpText>Unique key (UserId-VideoId) enforcing one view record per user per video. Set automatically.</inlineHelpText>
</CustomField>