force-app/main/default/objects/Training_View__c/fields/Watch_Percent__c.field-meta.xml
<CustomField>
    <fullName>Watch_Percent__c</fullName>
    <label>Watch Percent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
    <inlineHelpText>Highest percentage of the video this user has watched.</inlineHelpText>
</CustomField>